--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -1,27 +1,47 @@
-.header{
+.header {
     display: flex;
     padding: 0 15px;
     margin-bottom: 50px;
-    .logo{
+    background: #ededed;
+
+    .logo {
         -webkit-text-stroke: 1px;
     }
-    .navbar{
+
+    .navbar {
         width: 85%;
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding-left: 15px;
+        padding-left: 35px;
     }
-    .my-nav{
-        margin-right: 10px;
+
+    .my-nav {
+
+        margin-right: 20px;
+        text-decoration: none;
+        font-size: 18px;
+        font-weight: 500;
+        color: #0d6efd;
+
     }
 }
-.action-btn{
+
+.action-btn {
     width: 100%;
-    &:nth-child(1){
+
+    &:nth-child(1) {
         margin-bottom: 5px;
     }
 }
-.each-pro{
+
+.each-pro {
     margin-bottom: 15px;
+}
+
+.carousel{
+    min-height: 300px;
+}
+.carousel-item{
+    height: 100%;
 }
