--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,7 @@ body {
 h1,h2,h3,h4,h5,h6{
   font-family: 'DM Serif Display', serif;
 }
+p,ul{
+  margin: 0 !important;
+  padding: 0 !important;
+}
