--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -22,7 +22,7 @@
         text-decoration: none;
         font-size: 18px;
         font-weight: 500;
-        color: #0d6efd;
+        color: #ff0052;
 
     }
 }
@@ -44,4 +44,20 @@
 }
 .carousel-item{
     height: 100%;
+}
+.site-icon{
+    color: #ff0052;
+     
+}
+
+.my-slider{
+    height: 400px;
+    border-radius: 10px;
+    margin-bottom: 50px;
+    overflow: hidden;
+    img{
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+    }
 }
