--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -20,66 +20,72 @@
         justify-content: space-between;
         align-items: center;
         padding: 0px 0px 0px 35px;
-    }
+        .my-nav {
 
-    .my-nav {
-
-        margin-right: 20px;
-        text-decoration: none;
-        font-size: 18px;
-        font-weight: 500;
-        color: #fff;
-        &.active{
-            color: #df661d;
-        }
-    }
-   
-    .nav-right{
-        padding: 16px 20px;
-        background: #df661d;
-        .site-icon{
-            color: #ffffff;         
-        }
-        p{
-            color: #fff;
+            margin-right: 20px;
+            text-decoration: none;
+            font-size: 18px;
             font-weight: 500;
+            color: #fff;
+            padding: 14px 0;
+            &.active{
+                color: #df661d;
+            }
         }
-    }
-    .nav-left{
-        display: flex;
-        justify-content: space-between;
-        width: 88%;
-        .search{
-            display: flex;
-            position: relative;
-            width: 400px;
-            align-items: center;
-            button{
-                padding: 6px 11px;
-                background: #333;
+       
+        .nav-right{
+            padding: 16px 20px;
+            background: #df661d;
+            .site-icon{
+                color: #ffffff;         
+            }
+            p{
                 color: #fff;
-                border: none;
-                .sar-icon{
-                    margin-right: 5px;
-                }
-            }
-            input{
-                border: none;
-                padding: 6px 15px;
-                &::placeholder{
-                    color: #ddd;
-                }
-
+                font-weight: 500;
             }
         }
+        .nav-left{
+            display: flex;
+            justify-content: space-between;
+            width: 88%;
+            .search{
+                display: flex;
+                position: relative;
+                width: 400px;
+                align-items: center;
+                button{
+                    padding: 6px 11px;
+                    background: #333;
+                    color: #fff;
+                    border: none;
+                    .sar-icon{
+                        margin-right: 5px;
+                    }
+                }
+                input{
+                    border: none;
+                    padding: 6px 15px;
+                    &::placeholder{
+                        color: #ddd;
+                    }
+    
+                }
+            }
+        }
+        .login{
+            padding: 10px !important;
+            margin-left: 10px !important;
+            color: #fff;
+            border-left: 1px solid rgba(255, 255, 255, 0.589);
+            cursor: pointer;
+        }
     }
-    .login{
-        padding: 10px !important;
-        margin-left: 10px !important;
-        color: #fff;
-        border-left: 1px solid rgba(255, 255, 255, 0.589);
+    .nav-wrap{
+        display: flex;
     }
-}
+    }
+
+  
 
 .action-btn {
     width: 100%;
