Admin added, navigation styling change

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -29,13 +29,13 @@
             color: #fff;
             padding: 14px 0;
             &.active{
-                color: #df661d;
+                color: #fa9128;
             }
         }
        
         .nav-right{
             padding: 16px 20px;
-            background: #df661d;
+            background: #fa9128;
             .site-icon{
                 color: #ffffff;         
             }
