--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -2,7 +2,7 @@
     display: flex;
     padding: 0 0 0 15px;
     margin-bottom: 50px;
-    background: #287982;
+    background: #5e3987;
     position: sticky;
     top: 0;
     z-index: 999;
@@ -124,7 +124,7 @@
 .each-filter{
     border-radius: 10px;
     background: #fff;
-    padding: 15px;
+    // padding: 15px;
     p{
         font-weight: 700;
         font-size: 18px;
